# turnkey-gitwrapper

./: .gitignore  gitwrapper.py  pyproject.toml  setup.py
debian/: control  copyright
gitwrapper/: __init__.py
