[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "turnkey-gitwrapper"
authors = [{name = "TurnKey GNU/Linux", email = "jeremy@turnkeylinux.org"}]
license = {text = "GPLv3+"}
description = "Py3 wrapper library for working with git directories"

[project.urls]
Homepage = "https://github.com/turnkeylinux/turnkey-gitwrapper"

[tool.setuptools]
packages = ["gitwrapper"]
include-package-data = false

[tool.setuptools.package-data]
gitwrapper = ["py.typed"]
